crates/paigasus-helikon-macros/tests/ui/bad_tools_ctx_mismatch.stderr
error[E0277]: the trait bound `for_b: paigasus_helikon_core::Tool<CtxA>` is not satisfied
  --> tests/ui/bad_tools_ctx_mismatch.rs:39:40
   |
39 |     let _r: Vec<Arc<dyn Tool<CtxA>>> = tools![for_a, for_b];
   |                                        ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Tool<CtxA>` is not implemented for `for_b`
      but trait `Tool<CtxB>` is implemented for it
  --> tests/ui/bad_tools_ctx_mismatch.rs:30:1
   |
30 | #[tool]
   | ^^^^^^^
   = help: for that trait implementation, expected `CtxB`, found `CtxA`
   = note: required for the cast from `Arc<for_b>` to `Arc<dyn paigasus_helikon_core::Tool<CtxA>>`
   = note: this error originates in the macro `tools` which comes from the expansion of the attribute macro `tool` (in Nightly builds, run with -Z macro-backtrace for more info)
